--- a/app.json
+++ b/app.json
@@ -4,7 +4,16 @@
     "web": {
       "bundler": "metro"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "select and upload images.",
+          "cameraPermission": "Allow StringShare to access your camera."
+        }
+      ]
+    ],
     "name": "string-share",
     "slug": "string-share"
   }
