--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@types/react": "~18.2.14",
     "expo": "^49.0.3",
     "expo-constants": "~14.4.2",
+    "expo-file-system": "^15.6.0",
+    "expo-image-picker": "^14.5.0",
     "expo-linking": "~5.0.2",
+    "expo-location": "~16.1.0",
     "expo-router": "2.0.0",
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.4",
@@ -31,9 +34,9 @@
     "react-native-screens": "~3.22.0",
     "react-native-super-grid": "^5.0.0",
     "react-native-svg": "13.9.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.1.3",
-    "expo-location": "~16.1.0"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
