--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gluestack-ui/themed": "^0.1.51",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@types/react": "~18.2.14",
+    "axios": "^1.6.0",
     "expo": "^49.0.3",
     "expo-constants": "~14.4.2",
     "expo-file-system": "^15.6.0",
