--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "~18.2.14",
     "axios": "^1.6.0",
     "expo": "^49.0.3",
+    "expo-camera": "^13.6.0",
     "expo-constants": "~14.4.2",
     "expo-file-system": "^15.6.0",
     "expo-image-picker": "^14.5.0",
@@ -37,6 +38,8 @@
     "react-native-svg": "13.9.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2",
+    "react-native-youtube-iframe": "^2.3.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
